--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@auth0/auth0-react": "^2.1.0",
     "@azure/msal-browser": "^2.37.1",
     "@azure/msal-react": "^1.5.8",
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
+    "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,11 +17,15 @@
     "@types/node": "^16.18.36",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
+    "ag-grid-community": "^30.0.2",
+    "ag-grid-enterprise": "^30.0.2",
+    "ag-grid-react": "^30.0.2",
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
     "jotai": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "swr": "^2.1.5",
     "typescript": "^4.9.5",
