--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -3,8 +3,6 @@ name: NodeJS with Webpack
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 env:
   REGISTRY: registry.digitalocean.com
@@ -13,7 +11,7 @@ env:
   
 jobs:
   build:
-    environment: golang
+    environment: web
     runs-on: ubuntu-latest
 
     steps:
