--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -26,6 +26,12 @@ jobs:
       run: |
         yarn
         yarn build
+        
+    - name: GitHub Tag
+      id : tag_version
+      uses: mathieudutour/github-tag-action@v6.1
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
