--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -21,11 +21,6 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 20.x
-
-    - name: Build
-      run: |
-        yarn
-        yarn build
         
     - name: GitHub Tag
       id : tag_version
@@ -58,16 +53,21 @@ jobs:
           type=ref,event=pr
           type=semver,pattern={{version}}
 
+    - name: Log tags
+      run: |
+        echo "${{ steps.meta.outputs.tags }}"
+        echo "${{ steps.meta.outputs.labels }}"
+
     # Build and push Docker image with Buildx (don't push on PR)
     # https://github.com/docker/build-push-action
-    - name: Build and push Docker image
-      id: build-and-push
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        file: deploy/Dockerfile
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+#     - name: Build and push Docker image
+#       id: build-and-push
+#       uses: docker/build-push-action@v4
+#       with:
+#         context: .
+#         push: ${{ github.event_name != 'pull_request' }}
+#         tags: ${{ steps.meta.outputs.tags }}
+#         labels: ${{ steps.meta.outputs.labels }}
+#         file: deploy/Dockerfile
+#         cache-from: type=gha
+#         cache-to: type=gha,mode=max
