--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -40,34 +40,15 @@ jobs:
         username: ${{ secrets.DO_API_TOKEN }}
         password: ${{ secrets.DO_API_TOKEN }}
 
-    # Extract metadata (tags, labels) for Docker
-    # https://github.com/docker/metadata-action
-    - name: Extract Docker metadata
-      id: meta
-      uses: docker/metadata-action@v4
-      with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        tags: |
-          type=schedule
-          type=ref,event=branch
-          type=ref,event=pr
-          type=semver,pattern={{version}}
-
-    - name: Log tags
-      run: |
-        echo "${{ steps.meta.outputs.tags }}"
-        echo "${{ steps.meta.outputs.labels }}"
-
     # Build and push Docker image with Buildx (don't push on PR)
     # https://github.com/docker/build-push-action
-#     - name: Build and push Docker image
-#       id: build-and-push
-#       uses: docker/build-push-action@v4
-#       with:
-#         context: .
-#         push: ${{ github.event_name != 'pull_request' }}
-#         tags: ${{ steps.meta.outputs.tags }}
-#         labels: ${{ steps.meta.outputs.labels }}
-#         file: deploy/Dockerfile
-#         cache-from: type=gha
-#         cache-to: type=gha,mode=max
+    - name: Build and push Docker image
+      id: build-and-push
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: registry.digitalocean.com/keibi/kaytu-frontend:${{ steps.tag_version.outputs.new_tag }}
+        file: deploy/Dockerfile
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
