--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -4,15 +4,13 @@ on:
   push:
     branches: [ "main" ]
 
-env:
-  REGISTRY: registry.digitalocean.com
-  IMAGE_NAME: keibi/kaytu-frontend
-  
-  
 jobs:
   build:
     environment: web
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
 
     steps:
     - uses: actions/checkout@v3
@@ -31,14 +29,14 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    # https://github.com/docker/login-action
-    - name: Log into registry ${{ env.REGISTRY }}
-      if: github.event_name != 'pull_request'
-      uses: docker/login-action@v2
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
       with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ secrets.DO_API_TOKEN }}
-        password: ${{ secrets.DO_API_TOKEN }}
+        aws-region: ${{ vars.AWS_REGION }}
+        role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+    - uses: docker/login-action@v2
+      with:
+        registry: ${{ vars.DOCKER_REGISTRY }}
 
     # Build and push Docker image with Buildx (don't push on PR)
     # https://github.com/docker/build-push-action
@@ -48,7 +46,7 @@ jobs:
       with:
         context: .
         push: ${{ github.event_name != 'pull_request' }}
-        tags: registry.digitalocean.com/keibi/kaytu-frontend:${{ steps.tag_version.outputs.new_tag }}
+        tags: ${{ vars.DOCKER_REGISTRY }}/kaytu-frontend:${{ steps.tag_version.outputs.new_tag }}
         file: deploy/Dockerfile
         cache-from: type=gha
         cache-to: type=gha,mode=max
