fix: Fixes deployment

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -3,9 +3,9 @@ server {
   listen 7298;
 
   # This block is to catch workspaces and redirect to workspace/dashboard
-  location ~ ^(/(?!invitation|login|sign-up|workspaces))[a-zA-Z0-9]+(-[a-zA-Z0-9]+)*$ {
-    rewrite ^((/(?!invitation|login|sign-up|workspaces))[a-zA-Z0-9]+(-[a-zA-Z0-9]+)*$) $1/dashboard redirect;
-  }
+  # location ~ ^(/(?!invitation|login|sign-up|workspaces))[a-zA-Z0-9]+(-[a-zA-Z0-9]+)*$ {
+  #   rewrite ^((/(?!invitation|login|sign-up|workspaces))[a-zA-Z0-9]+(-[a-zA-Z0-9]+)*$) $1/dashboard redirect;
+  # }
 
   location / {
     root   /usr/share/nginx/html;
