--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ NODE_ENV=development
 REACT_APP_AUTH0_CLIENT_ID=vYzloLgV7846oTcvfUrLMryhz0FiRZH2
 REACT_APP_AUTH0_DOMAIN=kaytu-dev.us.auth0.com
 REACT_APP_BASE_URL=https://app.kaytu.dev
+REACT_APP_AUTH0_AUDIENCE=https://app.kaytu.io
