--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "dayjs": "^1.11.8",
     "jotai": "^2.2.0",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "runtime-env-cra": "^0.2.4",
-    "swr": "^2.1.5",
     "swagger-typescript-api": "^12.0.4",
+    "swr": "^2.1.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
