--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ag-grid-enterprise": "^30.0.2",
     "ag-grid-react": "^30.0.2",
     "axios": "^1.4.0",
+    "clipboard-copy": "^4.0.1",
     "dayjs": "^1.11.8",
     "jotai": "^2.2.0",
     "react": "^18.2.0",
