--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clipboard-copy": "^4.0.1",
     "dayjs": "^1.11.8",
     "jotai": "^2.2.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
