--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@azure/msal-react": "^1.5.8",
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@internationalized/date": "^3.3.0",
+    "@react-spectrum/datepicker": "^3.6.0",
+    "@react-spectrum/provider": "^3.8.0",
+    "@react-spectrum/theme-default": "^3.5.3",
     "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
