--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@internationalized/date": "^3.3.0",
-    "@react-spectrum/datepicker": "^3.6.0",
-    "@react-spectrum/provider": "^3.8.0",
-    "@react-spectrum/theme-default": "^3.5.3",
+    "@react-aria/calendar": "^3.4.0",
+    "@react-aria/datepicker": "^3.5.0",
+    "@react-aria/overlays": "^3.15.0",
     "@react-spectrum/view": "^3.6.0",
     "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
@@ -31,10 +31,12 @@
     "jotai": "^2.2.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-aria": "^3.26.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "react-stately": "^3.24.0",
     "runtime-env-cra": "^0.2.4",
     "swagger-typescript-api": "^12.0.4",
     "swr": "^2.1.5",
