--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-NODE_ENV=development
+REACT_APP_NODE_ENV=development
 REACT_APP_CLIENT_ID=NjdtXPbHOCXONvdp1MopUiZrZFaaypO6
 REACT_APP_DOMAIN=http://keibi-stg.us.auth0.com/
 REACT_APP_AUDIENCE=https://app.keibi.io
