--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 NODE_ENV=development
-REACT_APP_CLIENT_ID=NjdtXPbHOCXONvdp1MopUiZrZFaaypO6
-REACT_APP_DOMAIN=http://keibi-stg.us.auth0.com/
-REACT_APP_AUDIENCE=https://app.keibi.io
+RUNTIME_ENVIRONMENT=production
+REACT_APP_AUTH0_CLIENT_ID=vYzloLgV7846oTcvfUrLMryhz0FiRZH2
+REACT_APP_AUTH0_DOMAIN=kaytu-dev.us.auth0.com
 REACT_APP_BASE_URL=https://app.kaytu.dev
+REACT_APP_AUTH0_AUDIENCE=https://app.kaytu.io
