--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-NODE_ENV=development
-REACT_APP_RUNTIME_ENVIRONMENT=production
+NODE_ENV=production
+REACT_APP_RUNTIME_ENVIRONMENT=demo
 REACT_APP_AUTH0_CLIENT_ID=vYzloLgV7846oTcvfUrLMryhz0FiRZH2
 REACT_APP_AUTH0_DOMAIN=kaytu-dev.us.auth0.com
 REACT_APP_BASE_URL=https://app.kaytu.dev
