--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -11,6 +11,8 @@ jobs:
     permissions:
       id-token: write
       contents: read
+    env:
+      SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
 
     steps:
     - uses: actions/checkout@v3
@@ -48,5 +50,7 @@ jobs:
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ vars.DOCKER_REGISTRY }}/kaytu-frontend:${{ steps.tag_version.outputs.new_tag }}
         file: deploy/Dockerfile
+        build-args: |
+          APP_VERSION=${{ steps.tag_version.outputs.new_tag }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
