--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -73,9 +73,7 @@
         "no-underscore-dangle": [
             "error",
             {
-                "allow": [
-                    "__RUNTIME_CONFIG__"
-                ]
+                "allow": ["__RUNTIME_CONFIG__"]
             }
         ]
     }
