--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "axios": "^1.4.0",
         "clipboard-copy": "^4.0.1",
         "dayjs": "^1.11.8",
+        "echarts": "^5.4.3",
+        "echarts-for-react": "^3.0.2",
         "jotai": "^2.2.0",
         "jwt-decode": "^3.1.2",
         "prismjs": "^1.29.0",
