--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "echarts-for-react": "^3.0.2",
     "jotai": "^2.2.0",
     "jwt-decode": "^3.1.2",
+    "maskdata": "^1.2.2",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-aria": "^3.26.0",
