--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "React App",
-    "name": "Create React App Sample",
+    "short_name": "Kaytu App",
+    "name": "Kaytu App - Manage your clouds like a PRO",
     "icons": [
         {
             "src": "favicon.ico",
@@ -8,18 +8,13 @@
             "type": "image/x-icon"
         },
         {
-            "src": "logo192.png",
+            "src": "favicon-192.png",
             "type": "image/png",
             "sizes": "192x192"
-        },
-        {
-            "src": "logo512.png",
-            "type": "image/png",
-            "sizes": "512x512"
         }
     ],
     "start_url": ".",
     "display": "standalone",
-    "theme_color": "#000000",
-    "background_color": "#ffffff"
+    "theme_color": "#0D2239",
+    "background_color": "#F3F4F6"
 }
