--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Kaytu App",
-    "name": "Kaytu App - Manage your clouds like a PRO",
+    "short_name": "Kaytu app",
+    "name": "Kaytu app",
     "icons": [
         {
             "src": "favicon.ico",
