--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@ NODE_ENV=production
 REACT_APP_RUNTIME_ENVIRONMENT=demo
 REACT_APP_AUTH0_CLIENT_ID=vYzloLgV7846oTcvfUrLMryhz0FiRZH2
 REACT_APP_AUTH0_DOMAIN=kaytu-dev.us.auth0.com
-REACT_APP_BASE_URL=https://app.kaytu.dev
+REACT_APP_BASE_URL=https://api.kaytu.dev
 REACT_APP_AUTH0_AUDIENCE=https://app.kaytu.io
