fix: Move to kaytu.io

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -14,7 +14,7 @@ RUN npm install
 RUN npm run build
 RUN npm i @sentry/cli
 RUN npx sentry-cli sourcemaps inject --org sentry --project kaytu-app ./build
-RUN SENTRY_AUTH_TOKEN=${SENTRY_AUTH_TOKEN} npx sentry-cli --url https://sen.kaytu.dev/ sourcemaps upload --org sentry --release ${APP_VERSION} --project kaytu-app ./build
+RUN SENTRY_AUTH_TOKEN=${SENTRY_AUTH_TOKEN} npx sentry-cli --url https://sen.kaytu.io/ sourcemaps upload --org sentry --release ${APP_VERSION} --project kaytu-app ./build
 
 # Prepare nginx
 FROM docker.io/nginx:1.25.0-alpine
