--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react-aria": "^3.28.0",
         "react-csv": "^2.2.2",
         "react-dom": "^18.2.0",
+        "react-querybuilder": "^6.5.3",
         "react-router-dom": "^6.16.0",
         "react-scripts": "5.0.1",
         "react-simple-code-editor": "^0.13.1",
