--- a/public/manifest.json
+++ b/public/manifest.json
@@ -452,6 +452,7 @@
     }
   ],
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "theme_color": "#0D2239",
   "background_color": "#F3F4F6",
