added findings page

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@auth0/auth0-react": "^2.2.1",
         "@azure/msal-browser": "^2.38.2",
         "@azure/msal-react": "^1.5.11",
+        "@djthoms/pretty-checkbox": "^3.1.0",
         "@headlessui/react": "^1.7.17",
         "@heroicons/react": "^2.0.18",
         "@internationalized/date": "^3.5.0",
@@ -35,6 +36,7 @@
         "jotai": "^2.4.2",
         "jwt-decode": "^3.1.2",
         "maskdata": "^1.2.2",
+        "pretty-checkbox-react": "^3.2.0",
         "prismjs": "^1.29.0",
         "react": "^18.2.0",
         "react-aria": "^3.28.0",
