fix: Fixes onboard

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
             }
         ],
         "no-use-before-define": "off",
+        "jsx-a11y/label-has-for": "off",
         "@typescript-eslint/no-use-before-define": ["error"],
         "react/jsx-filename-extension": ["warn", { "extensions": [".tsx"] }],
         "import/extensions": [
