--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "dayjs": "^1.11.10",
         "echarts": "^5.4.3",
         "echarts-for-react": "^3.0.2",
+        "html-react-parser": "^5.0.7",
         "jotai": "^2.6.0",
         "jwt-decode": "^3.1.2",
         "maskdata": "^1.2.6",
