--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "react-aria": "^3.30.0",
         "react-csv": "^2.2.2",
         "react-dom": "^18.2.0",
+        "react-json-pretty": "^2.2.0",
         "react-markdown": "^9.0.1",
         "react-querybuilder": "^6.5.4",
         "react-router-dom": "^6.20.1",
