--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
-        "@tremor/react": "^3.11.1",
+        "@tremor/react": "^3.12.1",
         "@types/jest": "^27.5.2",
         "@types/node": "^16.18.67",
         "@types/react": "^18.2.41",
@@ -86,6 +86,7 @@
         ]
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@types/prismjs": "^1.26.3",
         "babel-plugin-named-exports-order": "^0.0.2",
         "chromatic": "^6.24.1",
