--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@headlessui/react": "^1.7.17",
         "@heroicons/react": "^2.0.18",
         "@internationalized/date": "^3.5.0",
+        "@microlink/react-json-view": "^1.23.0",
         "@react-aria/calendar": "^3.5.3",
         "@react-aria/datepicker": "^3.9.0",
         "@react-aria/overlays": "^3.19.0",
@@ -43,7 +44,6 @@
         "react-aria": "^3.30.0",
         "react-csv": "^2.2.2",
         "react-dom": "^18.2.0",
-        "react-json-pretty": "^2.2.0",
         "react-markdown": "^9.0.1",
         "react-querybuilder": "^6.5.4",
         "react-router-dom": "^6.20.1",
