--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "react-scripts": "5.0.1",
         "react-simple-code-editor": "^0.13.1",
         "react-stately": "^3.28.0",
+        "remark-gfm": "^4.0.0",
         "runtime-env-cra": "^0.2.4",
         "swagger-typescript-api": "^12.0.4",
         "swr": "^2.2.4",
