--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "NODE_ENV=development runtime-env-cra --config-name=./public/env-config.js && react-scripts start",
+        "start": "set NODE_ENV=development&&runtime-env-cra --config-name=./public/env-config.js && react-scripts start",
         "start-demo": "NODE_ENV=development runtime-env-cra --config-name=./public/env-demo-config.js && react-scripts start",
         "start-local-win": "SET NODE_ENV=development runtime-env-cra --config-name=./public/env-config.js && react-scripts start",
         "start-demo-local-win": "SET NODE_ENV=demo runtime-env-cra --config-name=./public/env-demo-config.js && react-scripts start",
