feat: prod workflow (#512)

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,6 +1,15 @@
 name: NodeJS with Webpack
 
 on:
+  workflow_dispatch:
+    inputs:
+      deployTo:
+        type: choice
+        description: "Environment to deploy to"
+        options:
+          - "dev"
+          - "prod"
+        default: "dev"
   push:
     branches: [ "main" ]
 
@@ -51,7 +60,9 @@ jobs:
       with:
         context: .
         push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ vars.DOCKER_REGISTRY }}/kaytu-frontend:${{ steps.tag_version.outputs.new_tag }}
+        tags: |
+          ${{ vars.DOCKER_REGISTRY }}/kaytu-frontend:${{ steps.tag_version.outputs.new_tag }}
+          ${{ vars.DOCKER_REGISTRY }}/kaytu-frontend:${{ github.event.inputs.deployTo == '' && 'dev' || github.event.inputs.deployTo }}
         build-args: |
           APP_VERSION=${{ steps.tag_version.outputs.new_tag }}
           SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}
