--- a/package.json
+++ b/package.json
@@ -58,9 +58,9 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "set NODE_ENV=development&&runtime-env-cra --config-name=./public/env-config.js && react-scripts start",
+        "start": "NODE_ENV=development runtime-env-cra --config-name=./public/env-config.js && react-scripts start",
         "start-demo": "NODE_ENV=development runtime-env-cra --config-name=./public/env-demo-config.js && react-scripts start",
-        "start-local-win": "SET NODE_ENV=development runtime-env-cra --config-name=./public/env-config.js && react-scripts start",
+        "start-win": "set NODE_ENV=development&&runtime-env-cra --config-name=./public/env-config.js && react-scripts start",
         "start-demo-local-win": "SET NODE_ENV=demo runtime-env-cra --config-name=./public/env-demo-config.js && react-scripts start",
         "build": "react-scripts build",
         "build:stg": "env-cmd -f stg.env react-scripts build",
