--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -62,7 +62,7 @@ jobs:
         push: ${{ github.event_name != 'pull_request' }}
         tags: |
           ${{ vars.DOCKER_REGISTRY }}/kaytu-frontend:${{ steps.tag_version.outputs.new_tag }}
-          ${{ vars.DOCKER_REGISTRY }}/kaytu-frontend:${{ github.event.inputs.deployTo == '' && 'dev' || github.event.inputs.deployTo }}
+          ${{ vars.DOCKER_REGISTRY }}/kaytu-frontend:${{ github.event.inputs.deployTo == '' && 'dev' || github.event.inputs.deployTo }}-${{ steps.tag_version.outputs.new_tag }}
         build-args: |
           APP_VERSION=${{ steps.tag_version.outputs.new_tag }}
           SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}
