--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -27,18 +27,36 @@ jobs:
       SENTRY_PROJECT: kaytu-app
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: GitHub Tag
+      id: tag_version
+      uses: mathieudutour/github-tag-action@v6.1
+      with:
+        github_token: ${{ secrets.GITHUBCI_TOKEN }}
 
     - name: Use Node.js 20.x
       uses: actions/setup-node@v3
       with:
         node-version: 20.x
-        
-    - name: GitHub Tag
-      id : tag_version
-      uses: mathieudutour/github-tag-action@v6.1
+
+    - name: NPM Cache
+      uses: actions/cache@v3
       with:
-        github_token: ${{ secrets.GITHUBCI_TOKEN }}
+        path: |
+          ~/.npm
+          ~/.cache
+          ./node_modules
+        key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-npm-
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Build
+      run: npm run build
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
@@ -62,9 +80,6 @@ jobs:
         push: ${{ github.event_name != 'pull_request' }}
         tags: |
           ${{ vars.DOCKER_REGISTRY }}/kaytu-frontend:${{ steps.tag_version.outputs.new_tag }}-${{ github.event.inputs.deployTo == '' && 'dev' || github.event.inputs.deployTo }}
-        build-args: |
-          APP_VERSION=${{ steps.tag_version.outputs.new_tag }}
-          SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}
         file: deploy/Dockerfile
         cache-from: type=gha
         cache-to: type=gha,mode=max
