--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -56,6 +56,8 @@ jobs:
       run: npm install
 
     - name: Build
+      env:
+        CI: false
       run: npm run build
 
     - name: Set up Docker Buildx
