--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "dayjs": "^1.11.10",
         "echarts": "^5.4.3",
         "echarts-for-react": "^3.0.2",
+        "framer-motion": "^10.18.0",
         "html-react-parser": "^5.0.7",
         "jotai": "^2.6.0",
         "jwt-decode": "^3.1.2",
