--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@types/node": "^16.18.67",
         "@types/react": "^18.2.41",
         "@types/react-dom": "^18.2.17",
+        "@uiw/react-markdown-preview": "^5.0.7",
         "ag-grid-community": "^31.0.0",
         "ag-grid-enterprise": "^31.0.0",
         "ag-grid-react": "^31.0.0",
