--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@react-aria/datepicker": "^3.9.0",
         "@react-aria/overlays": "^3.19.0",
         "@react-spectrum/view": "^3.6.5",
+        "@react-spring/web": "^9.7.3",
         "@sentry/cli": "^2.22.3",
         "@sentry/react": "^7.84.0",
         "@tailwindcss/forms": "^0.5.7",
@@ -52,8 +53,10 @@
         "react-scripts": "5.0.1",
         "react-simple-code-editor": "^0.13.1",
         "react-stately": "^3.28.0",
+        "react-use-measure": "^2.1.1",
         "remark-gfm": "^4.0.0",
         "runtime-env-cra": "^0.2.4",
+        "styled-components": "^6.1.8",
         "swagger-typescript-api": "^12.0.4",
         "swr": "^2.2.4",
         "typescript": "^4.9.5",
