--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@react-spring/web": "^9.7.3",
         "@sentry/cli": "^2.22.3",
         "@sentry/react": "^7.84.0",
+        "@superset-ui/embedded-sdk": "^0.1.0-alpha.11",
         "@tailwindcss/forms": "^0.5.7",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
