--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -70,7 +70,7 @@ jobs:
         role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
     - uses: docker/login-action@v2
       with:
-        registry: ${{ vars.DOCKER_REGISTRY }}
+        registry: ${{ vars.AWS_DOCKER_REGISTRY }}
 
     # Build and push Docker image with Buildx (don't push on PR)
     # https://github.com/docker/build-push-action
@@ -81,7 +81,24 @@ jobs:
         context: .
         push: ${{ github.event_name != 'pull_request' }}
         tags: |
-          ${{ vars.DOCKER_REGISTRY }}/kaytu-frontend:${{ steps.tag_version.outputs.new_tag }}-${{ github.event.inputs.deployTo == '' && 'dev' || github.event.inputs.deployTo }}
+          ${{ vars.AWS_DOCKER_REGISTRY }}/kaytu-frontend:${{ steps.tag_version.outputs.new_tag }}-${{ github.event.inputs.deployTo == '' && 'dev' || github.event.inputs.deployTo }}
+        file: deploy/Dockerfile
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+    - name: Azure Docker Login
+      uses: azure/docker-login@v1
+      with:
+        login-server: ${{ vars.AZURE_DOCKER_REGISTRY }}
+        username: ${{ secrets.ACR_USERNAME }}
+        password: ${{ secrets.ACR_PASSWORD }}
+    - name: Build and push Docker image
+      id: build-and-push
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: |
+          ${{ vars.AZURE_DOCKER_REGISTRY }}/kaytu-frontend:${{ steps.tag_version.outputs.new_tag }}-${{ github.event.inputs.deployTo == '' && 'dev' || github.event.inputs.deployTo }}
         file: deploy/Dockerfile
         cache-from: type=gha
         cache-to: type=gha,mode=max
