--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -92,7 +92,7 @@ jobs:
         username: ${{ secrets.ACR_USERNAME }}
         password: ${{ secrets.ACR_PASSWORD }}
     - name: Build and push Docker image
-      id: build-and-push
+      id: build-and-push-azure
       uses: docker/build-push-action@v4
       with:
         context: .
