--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
         "jsx": "react-jsx",
         "downlevelIteration": true
     },
-    "include": ["src", "src/configs"]
+    "include": ["src", "src/types"]
 }
