--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ REACT_APP_AUTH0_CLIENT_ID=MduzKsuqBeu6A4Hv0dZU7rcBiAA7Mtmf
 REACT_APP_AUTH0_DOMAIN=auth.kaytu.example
 REACT_APP_BASE_URL=https://api.kaytu.example
 REACT_APP_AUTH0_AUDIENCE=https://app.kaytu.example
+REACT_APP_AUTH_BASE_URL=https://app.kaytu.example
