--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -34,7 +34,7 @@ jobs:
       id: tag_version
       uses: mathieudutour/github-tag-action@v6.1
       with:
-        github_token: ${{ secrets.GITHUBCI_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Use Node.js 20.x
       uses: actions/setup-node@v3
