--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ REACT_APP_RUNTIME_ENVIRONMENT=demo
 REACT_APP_AUTH0_CLIENT_ID=MduzKsuqBeu6A4Hv0dZU7rcBiAA7Mtmf
 REACT_APP_AUTH0_DOMAIN=auth.kaytu.example
 REACT_APP_BASE_URL=https://api.kaytu.example
-REACT_APP_AUTH0_AUDIENCE=https://app.kaytu.example
-REACT_APP_AUTH_BASE_URL=https://app.kaytu.example
+REACT_APP_AUTH0_AUDIENCE=https://app.kaytu.io
+REACT_APP_AUTH_BASE_URL=https://app.kaytu.io
