fix: Fixes page refresh

--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ NODE_ENV=development
 REACT_APP_RUNTIME_ENVIRONMENT=production
 REACT_APP_AUTH0_CLIENT_ID=MduzKsuqBeu6A4Hv0dZU7rcBiAA7Mtmf
 REACT_APP_AUTH0_DOMAIN=kaytu.us.auth0.com
-REACT_APP_BASE_URL=https://app.kaytu.dev
-REACT_APP_AUTH0_AUDIENCE=https://app.kaytu.dev
-REACT_APP_AUTH_BASE_URL=https://app.kaytu.dev
+REACT_APP_BASE_URL=https://app.kaytu.io
+REACT_APP_AUTH0_AUDIENCE=https://app.kaytu.io
+REACT_APP_AUTH_BASE_URL=https://app.kaytu.io
