--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@auth0/auth0-react": "^2.2.3",
         "@azure/msal-browser": "^2.38.3",
         "@azure/msal-react": "^1.5.12",
+        "@calcom/embed-react": "^1.5.0",
         "@djthoms/pretty-checkbox": "^3.1.0",
         "@headlessui/react": "^1.7.17",
         "@heroicons/react": "^2.0.18",
