--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "prismjs": "^1.29.0",
         "react": "^18.2.0",
         "react-aria": "^3.30.0",
+        "react-complex-tree": "^2.4.5",
         "react-csv": "^2.2.2",
         "react-dom": "^18.2.0",
         "react-markdown": "^9.0.1",
