--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,4 +20,4 @@ docker-build:
       --dockerfile "${CI_PROJECT_DIR}/Dockerfile"
       --destination "${CI_REGISTRY_IMAGE}:${CI_COMMIT_TAG}"
   rules:
-    - if: $CI_COMMIT_BRANCH == $CI_COMMIT_BRANCH
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
