--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 NODE_ENV=production
 REACT_APP_RUNTIME_ENVIRONMENT=demo
-REACT_APP_BASE_URL=https://demo4.kaytu.sh
-REACT_APP_AUTH_BASE_URL=https://demo4.kaytu.sh
+REACT_APP_BASE_URL=https://demo5.opengovernance.io
+REACT_APP_AUTH_BASE_URL=https://demo5.opengovernance.io
