--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "@azure/msal-browser": "^2.38.3",
         "@azure/msal-react": "^1.5.12",
         "@calcom/embed-react": "^1.5.0",
+        "@cloudscape-design/components": "^3.0.765",
+        "@cloudscape-design/global-styles": "^1.0.32",
         "@djthoms/pretty-checkbox": "^3.1.0",
         "@headlessui/react": "^1.7.17",
         "@heroicons/react": "^2.0.18",
@@ -49,7 +51,7 @@
         "react-complex-tree": "^2.4.5",
         "react-csv": "^2.2.2",
         "react-dom": "^18.2.0",
-        "react-markdown": "^9.0.1",
+        "react-markdown": "^8.0.6",
         "react-querybuilder": "^6.5.4",
         "react-router-dom": "^6.20.1",
         "react-scripts": "5.0.1",
