--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "@react-aria/datepicker": "^3.9.0",
         "@react-aria/overlays": "^3.19.0",
         "@react-spectrum/view": "^3.6.5",
-        "@react-spring/web": "^9.7.3",
+        "@react-spring/web": "^9.7.2",
         "@sentry/cli": "^2.22.3",
         "@sentry/react": "^7.84.0",
         "@superset-ui/embedded-sdk": "^0.1.0-alpha.11",
@@ -31,6 +31,7 @@
         "@types/react": "^18.2.41",
         "@types/react-dom": "^18.2.17",
         "@uiw/react-markdown-preview": "^5.0.7",
+        "@visx/xychart": "^3.11.0",
         "ag-grid-community": "^31.0.0",
         "ag-grid-enterprise": "^31.0.0",
         "ag-grid-react": "^31.0.0",
@@ -56,6 +57,7 @@
         "react-router-dom": "^6.20.1",
         "react-scripts": "5.0.1",
         "react-simple-code-editor": "^0.13.1",
+        "react-spring": "^9.7.2",
         "react-stately": "^3.28.0",
         "react-use-measure": "^2.1.1",
         "remark-gfm": "^4.0.0",
