--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Kaytu",
-    "name": "Kaytu app",
+    "short_name": "OpenGovernance",
+    "name": "OpenGovernance app",
     "icons": [
         {
             "src": "windows11/SmallTile.scale-100.png",
@@ -456,7 +456,7 @@
     "display": "standalone",
     "theme_color": "#0D2239",
     "background_color": "#F3F4F6",
-    "id": "kaytu",
+    "id": "OpenGovernance",
     "description": "Manage your clouds like a PRO!",
     "dir": "ltr",
     "lang": "en",
