feat : add filters to connection

--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
         "ag-grid-react": "^31.0.0",
         "axios": "^1.6.2",
         "clipboard-copy": "^4.0.1",
+        "cookie": "^1.0.1",
+        "css-select": "^2.1.0",
         "dayjs": "^1.11.10",
         "echarts": "^5.5.1",
         "echarts-for-react": "^3.0.2",
@@ -45,6 +47,7 @@
         "jotai": "^2.6.0",
         "jwt-decode": "^3.1.2",
         "maskdata": "^1.2.6",
+        "postcss": "^8.4.47",
         "pretty-checkbox-react": "^3.2.0",
         "prismjs": "^1.29.0",
         "react": "^18.2.0",
